--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git+https://github.com/Yolk-HQ/next-css.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "css-loader": "^2.1.0",
     "extract-css-chunks-webpack-plugin": "^3.3.2",
